<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Android-EasySerialPort</string>

    <string name="GPIO_init_error">IO Driver Init error!</string>
    <string name="GPIO_max_num">Max Num:</string>
    <string name="GPIO_input_err">ERR: please input proper number.</string>
    <string name="GPIO_set_direction_in_ok">Set Direction Input succeeded.</string>
    <string name="GPIO_set_direction_in_fail">Set Direction Input Failed.</string>
    <string name="GPIO_set_direction_out_ok">Set Direction Output succeeded.</string>
    <string name="GPIO_set_direction_out_fail">Set Direction Output Failed.</string>
    <string name="GPIO_set_data_high_ok">Set Data High succeeded.</string>
    <string name="GPIO_set_data_high_fail">Set Data High Failed.</string>
    <string name="GPIO_set_data_low_ok">Set Data Low succeeded.</string>
    <string name="GPIO_set_data_low_fail">Set Data Low Failed.</string>

    <string name="GPIO_Setno_Text">GPIO</string>
    <string name="GPIO_Setnomax_Text">MaxNumber:</string>
    <string name="GPIO_Direction_Text">Set Direction</string>
    <string name="GPIO_Direction_In">Input</string>
    <string name="GPIO_Direction_Out">Output</string>
    <string name="GPIO_Data_Text">Set Data Level</string>
    <string name="GPIO_Data_High">High</string>
    <string name="GPIO_Data_Low">Low</string>
    <string name="GPIO_Edit_Value">0</string>


    <!-- Main Settings screen setting option name to go into the power on/off settings-->
    <string name="schedule_power_on_off_settings_title">Schedule power on &amp; off</string>
    <!-- Main Settings screen setting option summary text for the item to go into the date and time settings. -->
    <string name="schedule_power_on_off_time">Time</string>
    <!-- Date & time setting screen setting check box title if the date and time should be determined automatically -->
    <string name="schedule_power_on_off_repeat">Repeat</string>
    <!-- Date & time setting screen setting option summary text when Automatic check box is selected (that is, when date and time should be determined automatically) -->
    <string name="schedule_power_on_off_set">Set schedule power on &amp; off</string>
    <string name="schedule_power_on_set">Set schedule power on</string>
    <string name="schedule_power_off_set">Set schedule power off</string>
    <!-- Context Menu Item on Alarm Settings screen: Enable alarm -->
    <string name="enable_schpwr">Enable</string>
    <!-- Context Menu Item on Alarm Settings screen: Disable alarm -->
    <string name="disable_schpwr">Disable</string>
    <!-- Alarm confirmation toast: Describes how long from now until
         alarm fires -->
    <string-array name="alarm_set">
        <item>This power on is set for less than 1 minute from now.</item>
        <item>This power on is set for <xliff:g example="2 days" id="DAYS">%1$s</xliff:g> from now.</item>
        <item>This power on is set for <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> from now.</item>
        <item>This power on is set for <xliff:g example="2 days" id="DAYS">%1$s</xliff:g> and <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> from now.</item>
        <item>This power on is set for <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now.</item>
        <item>This power on is set for <xliff:g example="2 days" id="DAYS">%1$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now.</item>
        <item>This power on is set for <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now.</item>
        <item>This power on is set for <xliff:g example="2 days" id="DAYS">%1$s</xliff:g>, <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g>, and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now.</item>
        <item>This power off is set for less than 1 minute from now.</item>
        <item>This power off is set for <xliff:g example="2 days" id="DAYS">%1$s</xliff:g> from now.</item>
        <item>This power off is set for <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> from now.</item>
        <item>This power off is set for <xliff:g example="2 days" id="DAYS">%1$s</xliff:g> and <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> from now.</item>
        <item>This power off is set for <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now.</item>
        <item>This power off is set for <xliff:g example="2 days" id="DAYS">%1$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now.</item>
        <item>This power off is set for <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now.</item>
        <item>This power off is set for <xliff:g example="2 days" id="DAYS">%1$s</xliff:g>, <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g>, and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now.</item>
    </string-array>

    <string-array name="rates">
        <item>SENSOR_DELAY_FASTEST</item>
        <item>SENSOR_DELAY_GAME</item>
        <item>SENSOR_DELAY_UI</item>
        <item>SENSOR_DELAY_NORMAL</item>
    </string-array>

    <!-- Alarm confirmation toast: singular day -->
    <string name="day">"1 day"</string>

    <!-- Alarm confirmation toast: plural days -->
    <string name="days">"<xliff:g id="days">%s</xliff:g> days"</string>
    <!-- Alarm confirmation toast: singular hour -->
    <string name="hour">1 hour</string>

    <!-- Alarm confirmation toast: plural hours -->
    <string name="hours"><xliff:g id="hours">%s</xliff:g> hours</string>

    <!-- Alarm confirmation toast: singular minute  -->
    <string name="minute">"1 minute"</string>
    <!-- Alarm confirmation toast: plural minutes  -->
    <string name="minutes">"<xliff:g id="minutes">%s</xliff:g> minutes"</string>

    <!-- Repeat options that appear under an alarm on main Alarm Clock
         screen to identify repetition schedule: special case for when
         the alarm is set to repeat every day -->
    <string name="every_day">Every day</string>

    <!-- Repeat options that appear under an alarm on main Alarm Clock
         screen to identify repetition schedule: special case for when
         the alarm is set to never repeat -->
    <string name="never">Never</string>

    <!-- Repeat options that appear under an alarm on main Alarm Clock
         screen to identify repetition schedule: concatenate days with
         this character, i.e. "Mon, Tue, Wed" -->
    <string name="day_concat" translatable="false">", "</string>

    <!-- Done button when editing an alarm. -->
    <string name="done">Done</string>

    <!-- Revert button when editing an alarm. -->
    <string name="revert">Revert</string>
    <string name="schpwr_shutdown_message">"Your device will shut down in <xliff:g id="seconds">%s</xliff:g> seconds"</string>
    <string name="schpwr_shutdown_message_second">"Your device will shut down in <xliff:g id="second">%s</xliff:g> second"</string>
<!--    采样频率-->
    <string name="sensor_frequency">"Sampling frequency"</string>
</resources>
